Show scrollbar with narrow width correctly #3491

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -343,7 +343,8 @@ tab-sound-button */ {
   direction: ltr;
 }
 
-#tabbar {
+#pinned-tabs-container,
+#normal-tabs-container {
   scrollbar-width: thin;
 }
 
